--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "stask",
+  "name": "tobe",
   "version": "0.0.0",
   "private": true,
   "scripts": {
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@mdi/font": "5.9.55",
-    "firebase": "^9.9.3",
+    "firebase": "^9.19.1",
     "roboto-fontface": "*",
     "vue": "^3.2.37",
     "vue-router": "^4.1.3",
